Adicionando uma tabela com diciplinas cursadas no semestre atual

--- a/index.html
+++ b/index.html
@@ -91,6 +91,41 @@
                   <li>Atividades: Atendimento ao público do telecentro com a realização de oficinas e acesso livre</li>
                   <li>à internet bem como, para o exercício da cidadania e o mercado de trabalho.</li>
           </ul>
+          <hr>
+        </div>
+        <div class="tabela">
+          <table>
+            <tr>
+              <th>Diciplinas Cursadas</th>
+              <th>Semestre</th>
+              <th>Periodo</th>
+            </tr>
+            <tr>
+              <td>Desenvolvimento Web</td>
+              <td>5 semestre</td>
+              <td>Noturno</td>
+            </tr>
+            <tr>
+              <td>Banco de Dados 2</td>
+              <td>3 semestre</td>
+              <td>Noturno</td>
+            </tr>
+            <tr>
+              <td>Analise Orientada a Objetos</td>
+              <td>3 semestre</td>
+              <td>Norturno</td>
+            </tr>
+            <tr>
+              <td>Interacao Humano Computador</td>
+              <td>3 semestre</td> 
+              <td>Noturno</td>
+            </tr>         
+            <tr>
+              <td>Matematica Financeira</td>
+              <td>3 semestre</td>
+              <td>Noturno</td>
+            </tr>
+          </table>
         </div>
     </main>
 
