ajustando esqueleto da pagina

--- a/index.html
+++ b/index.html
@@ -34,63 +34,70 @@
     </div>
 
     <div id="school">
-      <hr>
-      <h2>Escolaridade:</h2>
-      <hr>
-      <ul>
-        <li>
-          Curso Técnico em Eletrônica Integrado ao Ensino Médio
-        </li>
-        <li>
-          Instituição: Instituto Federal de São Paulo – Campus Campinas
-        </li>
-        <li>
-          Data de início: 01/02/2018
-        </li>
-        <li>
-          Data do término: 31/12/2021
-        </li>
-        <li>
-          <a href="https://www.ifsp.edu.br/" target="_blank">IFSP</a>
-        </li>
-      </ul><br>
-      <ul>
-        <li>
-          Analise e desenvolvimento de sistemas </li>
-
-        <li>
-          Instituição: Instituto Federal de São Paulo – Campus Campinas
-        </li>
-        <li>
-          Data de início: 01/02/2022
-        </li>
-
-        <li>
-          <a href="https://www.ifsp.edu.br/" target="_blank">IFSP</a>
-        </li>
-      </ul>
+      <h2 id="schoolTitle">Escolaridade</h2>
+      <div id="schoolConteud">
+        <div id="tecnic">
+          <ul>
+            <li>
+              Curso Técnico em Eletrônica Integrado ao Ensino Médio
+            </li>
+            <li>
+              Instituição: Instituto Federal de São Paulo – Campus Campinas
+            </li>
+            <li>
+              Data de início: 01/02/2018
+            </li>
+            <li>
+              Data do término: 31/12/2021
+            </li>
+            <li>
+              <a href="https://www.ifsp.edu.br/" target="_blank">IFSP</a>
+            </li>
+          </ul>
+        </div>
+        <div id="university">
+          <ul>
+            <li>
+              Analise e desenvolvimento de sistemas </li>
+            <li>
+              Instituição: Instituto Federal de São Paulo – Campus Campinas
+            </li>
+            <li>
+              Data de início: 01/02/2022
+            </li>
+            <li>
+              <a href="https://www.ifsp.edu.br/" target="_blank">IFSP</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <div id="work">
-      <hr>
-      <h2>Experiencia Profissional:</h2>
-      <hr>
-      <ul>
-        <li>● Empresa: EPTV Campinas</li>
-        <li>Função: Estagiário de Eletrônica</li>
-        <li>Data de início: 11/01/2021</li>
-        <li>Data de término: 14/06/2021</li>
-        <li>Atividades: Auxiliar na instalação e configuração de equipamentos de televisão;</li>
-        <li>Acompanhar a monitoração de sinais e testes; Auxiliar na manutenção e uso de</li>
-        <li>instrumentos correlatos na área. Auxiliar na manutenção técnica e suporte.</li>
-        <li>● Empresa: Prefeitura de Campinas</li>
-        <li>Função: Jovem Bolsista</li>
-        <li>Data de início: 16/11/2020</li>
-        <li>Data de término: 16/11/2022</li>
-        <li>Atividades: Atendimento ao público do telecentro com a realização de oficinas e acesso livre</li>
-        <li>à internet bem como, para o exercício da cidadania e o mercado de trabalho.</li>
-      </ul>
-      <hr>
+      <h2 id="workTitle">Experiencia Profissional</h2>
+      <div id="workConteud">
+        <div id="eptv">
+          <ul>
+              <li>● Empresa: EPTV Campinas</li>
+              <li>Função: Estagiário de Eletrônica</li>
+              <li>Data de início: 11/01/2021</li>
+              <li>Data de término: 14/06/2021</li>
+              <li>Atividades: Auxiliar na instalação e configuração de equipamentos de televisão;</li>
+              <li>Acompanhar a monitoração de sinais e testes; Auxiliar na manutenção e uso de</li>
+              <li>instrumentos correlatos na área. Auxiliar na manutenção técnica e suporte.</li>
+          </ul>
+        </div>
+        <div id="juventude">
+          <ul>
+            <li>● Empresa: Prefeitura de Campinas</li>
+            <li>Função: Jovem Bolsista</li>
+            <li>Data de início: 16/11/2020</li>
+            <li>Data de término: 16/11/2022</li>
+            <li>Atividades: Atendimento ao público do telecentro com a realização de oficinas e acesso livre</li>
+            <li>à internet bem como, para o exercício da cidadania e o mercado de trabalho.</li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div class="tabela">
       <table>
