Ajustando navbar e colocando descriçao about me

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 
 <body>
   <header>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">Sobre</a></li>
-        <li><a href="#school">Escolaridade</a></li>
-        <li><a href="#work">Experiencia Profissional</a></li>
-        <li><a href="#contacts">Contatos</a></li>
-      </ul>
-    </nav>
+    <div id="navbar">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#school">Escolaridade</a></li>
+            <li><a href="#work">Experiencia Profissional</a></li>
+            <li><a href="#contacts">Contatos</a></li>
+        </ul>
+    </div>
   </header>
   
   <main>
     <div id="about">
       <div class="aboutTopic">
         <h1 id="home">I'm Developer</h1>
-        <p>Meu nome é Yuri, tenho 20 anos e sou Desenvolvedor</p>
+        <p>Olá, eu sou Yuri, um desenvolvedor front-end de 20 anos apaixonado por criar interfaces atraentes e funcionais. Com habilidades em HTML, CSS, JavaScript e especialista em Vue, eu tenho a capacidade de criar soluções personalizadas para meus clientes. Além disso, tenho experiência em desenvolvimento de chatbots, o que me permite criar soluções interativas e automatizadas. Estou constantemente buscando aprimorar minhas habilidades técnicas e criar soluções inovadoras para meus projetos. É uma grande satisfação poder contribuir para o sucesso dos meus clientes com minhas habilidades e conhecimentos em desenvolvimento front-end.</p>
       </div>
       <img id="myPhoto" src="yuriFoto.jpeg" alt="Foto do Yuri">
     </div>
@@ -95,6 +95,14 @@
             <li>Data de término: 16/11/2022</li>
             <li>Atividades: Atendimento ao público do telecentro com a realização de oficinas e acesso livre</li>
             <li>à internet bem como, para o exercício da cidadania e o mercado de trabalho.</li>
+          </ul>
+        </div>
+        <div id="ciandt">
+          <ul>
+            <li>● Empresa: CI&T</li>
+            <li>Função: Aprendiz de TI</li>
+            <li>Data de início: 04/04/2022</li>
+            <li>Atividades: Auxiliar no desenvolvimento de fluxos de chatbots, usando a linguagem de programação Java Script. Auxiliar no desenvolvimento web com Java Script, Vue, HTML e CSS</li>
           </ul>
         </div>
       </div>
